update options.html with github url

--- a/options.html
+++ b/options.html
@@ -90,12 +90,12 @@
         <b>Optimized for networked thought with <a href="https://roamresearch.com/">Roam.</a></b>
         <br/>
         <br/>
-        Feature Requests / Bugs -> <a href="https://github.com/">github</a>
+        Feature Requests / Bugs -> <a href="https://github.com/exrhizo/yt-timemarks">github.</a>
         <br/>
         <br/>
-        Developed by <a href="http://www.exrhizo.me">Alex Warren (exrhizo)</a>
+        Developed by <a href="http://www.exrhizo.me">Alex Warren</a> exrhizo
         <br/>
-        Shoutout to <a href="https://morgansutherland.com/">Morgan Sutherland</a>
+        Shoutout to <a href="https://morgansutherland.com/">Morgan Sutherland!</a>
       </div>
 
 
